--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -25,7 +25,11 @@
     <view class="weui-cells weui-cells_after-title">
       <view wx:for="{{item.worktimes}}" wx:key="this" wx:for-item="worktime" class="weui-cell" data-worktime="{{worktime}}" bindtap='onCell'>                
           <view class="weui-cell__bd">{{worktime.time}}</view>   
-          <view wx:if="{{null != worktime.order}}" class="weui-cell__ft weui-cell__ft_in-access order-list-cell_value font-size_16"><label wx:if="{{'finished' == worktime.order.state}}" style='width:116px;margin-right:20px;' class="font-size_13 font-color_888">已结账 ({{worktime.order.payTypeName}})</label><label class="font-weight">{{worktime.order.plateNumber}}</label></view>              
+          <view wx:if="{{null != worktime.order}}" class="weui-cell__ft weui-cell__ft_in-access order-list-cell_value font-size_16">
+            <label wx:if="{{'finished' == worktime.order.state}}" style='width:116px;margin-right:20px;' class="font-size_13 font-color_888">已结账 ({{worktime.order.payTypeName}})</label>
+            <label wx:if="{{'discredit' == worktime.order.state}}" style='width:116px;margin-right:20px;' class="font-size_13 font-color_888">车主违约</label>
+            <label class="font-weight">{{worktime.order.plateNumber}}</label>
+          </view>              
       </view>
     </view>
   </block>
@@ -68,5 +72,5 @@
   </view>
   <view style='color:#1AAD19' class="payment-popup-view_btn payment-popup-view_line" bindtap='onPayment'>洗车结账</view>
   <view wx:if="{{true == showCancelBtn}}" class="payment-popup-view_btn payment-popup-view_line" bindtap='onCancelOrder'>取消预约</view>
-  <view wx:if="{{true == showWYBtn}}" class="payment-popup-view_btn">车主违约</view>
+  <view wx:if="{{true == showWYBtn}}" class="payment-popup-view_btn" bindtap="onDiscreditOrder">车主违约</view>
 </van-popup>
