--- a/pages/memberDetail/memberDetail.wxml
+++ b/pages/memberDetail/memberDetail.wxml
@@ -3,12 +3,13 @@
     <view class="weui-panel__bd">
         <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
             <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-                <image style='border-radius:5px;' class="weui-media-box__thumb" src="https://wx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTLnGbXZlPnVf7345c9XVeFXAia8ibibxqt85YT1aRS4alViaHv6EqvKg4RPiaKg83cZOmTsyPjfibdvgpuQ/132" />
+                <image style='border-radius:5px;' class="weui-media-box__thumb" src="{{user.avatarUrl}}" />
             </view>
             <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-                <view class="weui-media-box__title font-size_17">毛宇</view>
-                <view style='margin-top:10px;' class="weui-media-box__desc font-color_4a font-size_14">会员卡：33180918</view>
+                <view class="weui-media-box__title font-size_17">{{user.nickName}}</view>
+                <view style='margin-top:10px;' class="weui-media-box__desc font-color_4a font-size_14">会员卡：{{member.serial}}</view>
             </view>
+            <view class="weui-cell__ft_in-access" style="margin-top:80rpx"><image class="credit-image" src="../../images/credit.png"/></view>
         </view>       
     </view>   
 </view>
@@ -16,10 +17,18 @@
 <view class="weui-cells">
     <view class="weui-cell">        
         <view class="weui-cell__bd">卡内余额</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">￥300</view>
+        <view class="weui-cell__ft">￥{{member.balance/100}}</view>
+    </view> 
+    <view class="weui-cell">        
+        <view class="weui-cell__bd">有效期至</view>
+        <view class="weui-cell__ft">{{member.uiExpiredAt}}</view>
     </view>  
 </view>
 
 <view class="add-consume-view font-size_17" bindtap='onClickAddConsume'>
   添加消费
+</view>
+
+<view style="margin-top:10px" class="add-consume-view font-size_17" bindtap='onShowPay'>
+  会员卡充值
 </view>
