--- a/pages/memberDetail/memberDetail.wxml
+++ b/pages/memberDetail/memberDetail.wxml
@@ -1,5 +1,5 @@
 <!--pages/memberDetail/memberDetail.wxml-->
- <view class="weui-panel weui-panel_access">    
+ <view class="weui-panel weui-panel_access" bindtap="onShowUserCreditList">    
     <view class="weui-panel__bd">
         <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
             <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
