--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -18,14 +18,14 @@
 <block wx:if="{{true == clerk}}">
   <view class="weui-cells__title">查找用户</view>
    <view class="weui-cells weui-cells_after-title">
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="../searchMember/searchMember?mode=member" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
             <image mode="aspectFit" src="../../images/search.png" class="cell_icon"></image>
         </view>
         <view class="weui-cell__bd">根据会员卡号查询</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </navigator>
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="../searchMember/searchMember?mode=number" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
             <image mode="aspectFit" src="../../images/search.png" class="cell_icon"></image>
         </view>
