--- a/pages/previewAnnouncement/previewAnnouncement.wxml
+++ b/pages/previewAnnouncement/previewAnnouncement.wxml
@@ -19,7 +19,14 @@
 
 <view class="add-employees-view">
   <view class="weui-flex add-employees-view_inner">
-    <button class="btn edit-btn" bindtap='onEdit'>编辑</button>
-    <button class="btn del-btn" bindtap='onDel'>删除</button>
+    <block wx:if="{{'edit' == mode}}">
+      <button class="btn edit-btn" bindtap='onEdit'>编辑</button>
+      <button class="btn del-btn" bindtap='onDel'>删除</button>
+    </block>
+
+    <block wx:if="{{'view' == mode}}">
+      <button wx:if="{{null == role}}" class="" plain="true" bindtap='onOpenMiniApp'>打开用户端小程序</button>
+      <button wx:if="{{'clerk' == role}}" class="" plain="true" bindtap='onBackHome'>返回首页</button>
+    </block>
   </view>
 </view>
