--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -18,20 +18,20 @@
 <block wx:if="{{true == clerk}}">
   <view class="weui-cells__title">查找用户</view>
    <view class="weui-cells weui-cells_after-title">
-    <navigator url="../searchMember/searchMember?mode=member" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <view url="../searchMember/searchMember?mode=member" class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="onSearchByMember">
         <view class="weui-cell__hd">
             <image mode="aspectFit" src="../../images/search.png" class="cell_icon"></image>
         </view>
         <view class="weui-cell__bd">根据会员卡号查询</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-    </navigator>
-    <navigator url="../searchMember/searchMember?mode=number" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    </view>
+    <view url="../searchMember/searchMember?mode=number" class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="onSearchByNumber">
         <view class="weui-cell__hd">
             <image mode="aspectFit" src="../../images/search.png" class="cell_icon"></image>
         </view>
         <view class="weui-cell__bd">根据车牌号码查询</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-    </navigator>
+    </view>
   </view>
 
 </block>
@@ -82,7 +82,7 @@
     </navigator>
   </view>
 
-  <view class="weui-cells">
+  <!-- <view class="weui-cells">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
             <image mode="aspectFill" src="../../images/data_icon.png" class="cell_icon"></image>
@@ -90,5 +90,5 @@
         <view class="weui-cell__bd">数据</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </view>
-  </view>
+  </view> -->
 </block>
